# gpkit-models

./: .flake8  .gitignore  Makefile  README.md  catalog.toml  pyproject.toml  requirements-dev.txt  uv.toml.example
.github/workflows/: lint.yml  publish.yml  tests.yml
gpkitmodels/: __init__.py
gpkitmodels/GP/aircraft/engine/: df70.py  gas_engine.py
gpkitmodels/GP/aircraft/engine/DF70/: fitDF70.py
gpkitmodels/GP/aircraft/fuselage/: cylindrical_fuselage.py  elliptical_fuselage.py  fuel_tank.py  fuselage_skin.py  test_fuselage.py
gpkitmodels/GP/aircraft/fuselage/fuselage_profile_drag/: fusedragfit.py
gpkitmodels/GP/aircraft/mission/: breguet_endurance.py
gpkitmodels/GP/aircraft/motor/: motor.py  motor_test.py
gpkitmodels/GP/aircraft/prop/: arccos_fit.py  prop_test.py  propeller.py
gpkitmodels/GP/aircraft/tail/: empennage.py  horizontal_tail.py  tail_aero.py  tail_boom.py  tail_tests.py  tube_spar.py  vertical_tail.py
gpkitmodels/GP/aircraft/tail/tailpolars/: naca_cl0fits.py
gpkitmodels/GP/aircraft/wing/: arctan_fit.py  boxspar.py  capspar.py  constant_taper_chord.py  gustloading.py  sparloading.py  tube_spar.py  wing.py  wing_core.py  wing_skin.py  wing_test.py
gpkitmodels/GP/aircraft/wing/jho1polars/: jho1_polarfits.py
gpkitmodels/GP/beam/: beam.py
gpkitmodels/GP/materials/: composite.py  foam.py
gpkitmodels/SP/SimPleAC/: SimPleAC.py  SimPleAC_mission.py  SimPleAC_multimission.py
gpkitmodels/SP/aircraft/prop/: propeller.py
gpkitmodels/SP/aircraft/prop/dae51polars/: dae51_polarfits.py
gpkitmodels/SP/aircraft/tail/: tail_boom_flex.py
gpkitmodels/SP/aircraft/wing/: boxspar.py  wing.py
gpkitmodels/SP/atmosphere/: atmosphere.py
gpkitmodels/misc/Moment of Inertia (cylindrical beam)/: moi.py
gpkitmodels/misc/Net Present Value/: npv.py
gpkitmodels/misc/Raymer Weights/: Raymer_Exact.py
gpkitmodels/misc/Raymer Weights/Blended Wing-Body/: Raymer_Weights_Model.py
gpkitmodels/spacecraft/: __init__.py  propulsion.py
gpkitmodels/tools/: fit_constraintset.py  ipynb2module.py  modular.py  summing_constraintset.py  test_fit_constraintset.py  xfoilWrapper.py
tests/: test_catalog.py
