[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpkit-models"
version = "0.1.0"
description = "Library of exponential cone compatible sizing models"
readme = "README.md"
authors = [
    { name = "Warren Hoburg", email = "whoburg@alum.mit.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "adce",
    "gpkit-core",
    "pandas",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "isort>=5.12.0",
    "black>=24.1.0",
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    # Testing
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://www.github.com/beautifulmachines/gpkit-models"

[tool.setuptools]
packages = { find = {} }
package-data = { "gpkitmodels" = [
    "GP/aircraft/wing/*.csv",
    "GP/aircraft/fuselage/fuselage_profile_drag/*.csv",
    "GP/aircraft/engine/*.csv",
    "GP/aircraft/motor/*.csv",
    "GP/aircraft/prop/*.csv",
    "SP/aircraft/prop/*.csv",
    "GP/aircraft/engine/DF70/*.csv",
    "GP/aircraft/tail/*.csv"
]}
