[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "gpkit-models"
readme = "README.md"
description = "Library of exponential cone compatible sizing models"
authors = [
    { name = "Warren Hoburg", email = "whoburg@alum.mit.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "adce>=1.3.3.2",
    "gpkit-core>=0.2.4",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}, "pre-commit>=4.0.0"]
lint = [
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://www.github.com/beautifulmachines/gpkit-models"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["gpkitmodels"]
artifacts = [
    "gpkitmodels/GP/aircraft/wing/*.csv",
    "gpkitmodels/GP/aircraft/fuselage/fuselage_profile_drag/*.csv",
    "gpkitmodels/GP/aircraft/engine/*.csv",
    "gpkitmodels/GP/aircraft/motor/*.csv",
    "gpkitmodels/GP/aircraft/prop/*.csv",
    "gpkitmodels/SP/aircraft/prop/*.csv",
    "gpkitmodels/GP/aircraft/engine/DF70/*.csv",
    "gpkitmodels/GP/aircraft/tail/*.csv",
]

[tool.ruff]
target-version = "py311"
extend-exclude = ["gpkitmodels/misc"]  # unreferenced legacy/reference material, not maintained package code

[tool.ruff.lint]
extend-select = [
    "I",      # import sorting, replaces isort
    "PL",     # pylint-parity category (convention/error/refactor/warning), stable rules only
    "ARG",    # unused-argument family
    "BLE",    # blind-except (broad-exception-caught)
    "UP032",  # f-string modernization
    "S102",   # exec-used
]
ignore = [
    "E741",     # ambiguous-variable-name: physics notation (l=length, I=moment of inertia)
    "PLR2004",  # magic-value-comparison: noisy, no precedent, revisit later
]

[tool.ruff.lint.per-file-ignores]
# Variable() calls have side effects (registering in the model's namespace via
# NamedVariables) independent of whether the local binding is referenced again;
# carried forward from the old .flake8 per-file-ignores.
# Code smell, tracked in https://github.com/beautifulmachines/gpkit-models/issues/29
"gpkitmodels/SP/SimPleAC/SimPleAC_mission.py" = ["F841"]
"gpkitmodels/GP/aircraft/fuselage/fuselage_profile_drag/fusedragfit.py" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["gpkitmodels", "tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gpkitmodels"]
omit = ["gpkitmodels/**/test_*.py", "gpkitmodels/**/*_test.py", "gpkitmodels/**/*_tests.py"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.uv.sources]
gpkit-core = { path = "../gpkit-core", editable = true }
